--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@ h1, h2, h3 {
 
 /* But your visualization should be full-width and full-height */
 .piechart-holder {
-  width: 100%;
-  height: 100%;
   text-align: center;
   margin: auto;
 }
@@ -40,6 +38,19 @@ h1, h2, h3 {
 	margin: auto;
 	display: block;
 }
+
+.table-holder {
+	height: 400px;
+	width: 800px;
+	text-align: center;
+	margin: auto;
+	display: block;
+	overflow-y: scroll;
+	overflow-x: visible;
+}
+
+
+
 
 
 .vis-svg {
