--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body {
 }
 
 h1, h2, h3 {
-	line-height: 1.2
+	line-height: 1.2;
+	padding: 10px;
+	margin: auto;
 }
 
 /* Your text should be in a nice narrow column */
@@ -21,6 +23,7 @@ h1, h2, h3 {
 .piechart-holder {
   text-align: center;
   margin: auto;
+  padding-top: 50px;
 }
 
 .piechartlegend-holder {
@@ -31,7 +34,7 @@ h1, h2, h3 {
 	display: block;
 }
 
-.piechartlegend {
+.piechartLegend {
 	width: 100%;
 	height: 100%;
 	text-align: center;
@@ -39,75 +42,53 @@ h1, h2, h3 {
 	display: block;
 }
 
-/* .table-holder {
-	height: 400px;
-	width: 800px;
-	text-align: center;
-	margin: auto;
-	display: block;
-	overflow-y: scroll;
-	overflow-x: visible; 
-}
-
-.table-holder tbody{
-	display: block;
-	overflow: auto;
-	text-align: center;
-	margin: auto;
-	height: 400px;
-	width: 800px;
+::-webkit-scrollbar {
+	width: 1px;
   }
 
-  .ftable-holder thead tr{
-	display: block;
-  } */
+.table-radar-holder {
+	display: flex;
+	margin: auto;
+}
+
+.radar-holder {
+	text-align: center;
+	margin: auto
+}
 
 .table-holder {
-	height: 450px;
-	width: 800px;
-	table-layout: fixed;
-	display: block;
+	height: 400px;
+	width: 600px;
+	overflow-y: scroll;
 	margin: auto;
-	text-align: center;
-    border-collapse: collapse;
+	border-radius: 10px;
+	border: 5px solid rgb(186, 186, 192);
 }
 
 .table-holder tbody{
   display: block;
-  width: 800px;
-  overflow: auto;
-  text-align: center;
-  height: 400px;
-  margin: auto;
 }
 
 .table-holder thead tr {
-   display: block;
-   width: 800px;
-   text-align: center;
-   margin: auto;
-}
-
-.table-holder thead {
-  background: #DEECEF;
-  /* text-align: center; */
-  width: 800px;
-  color:#333;
-  margin: auto;
-  text-align: center;
+	display: block;
+	background: #DEECEF;
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
 }
 
 .table-holder th, .table-holder td {
-  /* padding: px; */
-  text-align: center;
-  width: 250px;
-  margin: auto;
-}
-
-
-.radarchart-holder {
-	margin: auto;
 	text-align: center;
+	width: 600px;
+  }
+
+.mood-buttons-holder {
+	display: flex;
+	margin: auto;
+	border-radius: 10px;
+	border: 5px solid rgb(186, 186, 192);
+	width: 1000px;
+	height: 60px;
 }
 
 
