--- a/style.css
+++ b/style.css
@@ -91,6 +91,15 @@ h1, h2, h3 {
 	height: 60px;
 }
 
+.playlist-buttons-holder {
+	display: flex;
+	margin: auto;
+	border-radius: 10px;
+	border: 5px solid rgb(186, 186, 192);
+	width: 800px;
+	height: 60px;
+}
+
 
 
 
