--- a/style.css
+++ b/style.css
@@ -159,7 +159,15 @@ button:focus {
 }
 
 ::-webkit-scrollbar {
-	width: 1px;
+	width: 10px;
+  }
+::-webkit-scrollbar-thumb {
+	width: 10px;
+	background: #778899;
+    border-radius: 10px;
+  }
+::-webkit-scrollbar-track {
+	width: 10px;
   }
 
 .table-radar-holder {
