--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ h3 {
 	width: 1000px;
 }
 
+.abstract {
+	width: 1000px;
+}
+
 .playlist-buttons-holder {
 	display: flex;
 	margin: auto;
@@ -169,7 +173,7 @@ button:focus {
 ::-webkit-scrollbar-track {
 	width: 10px;
   }
-
+  
 .table-radar-holder {
 	display: flex;
 	margin: auto;
